@@ -140,7 +140,7 @@ var CloudCommander, Util, DOM, $;
             // define the elements of the menu
             items: getAllItems({
                 'View'      : Util.retExec(showEditor, true),
-                'Edit'      : Util.retExec(showEditor),
+                'Edit'      : Util.retExec(showEditor, false),
                 'Delete'    : Util.retExec(DOM.promptRemoveCurrent),
                 'Upload to' : getUploadToItem( ['GitHub', 'GDrive', 'DropBox'] ),
                 'Download' : function(key, opt){
@@ -246,8 +246,7 @@ var CloudCommander, Util, DOM, $;
                         /* if document.onclick was set up
                          * before us, it's best time to call it
                          */
-                        if(typeof lFunc_f === 'function')
-                            lFunc_f();
+                        Util.exec(lFunc_f);
                             
                         KeyBinding.set();
                     }
