@@ -243,7 +243,9 @@ var Util, exports;
      */
     Util.retExec                = function(pCallBack, pArg){
         return function(pArgument){
-            Util.exec(pCallBack, pArg || pArgument);
+            if( !Util.isUndefined(pArg) )
+                pArgument = pArg;
+            Util.exec(pCallBack, pArgument);
         };
     };
    
